--- a/views/profile.html
+++ b/views/profile.html
@@ -13,8 +13,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="avatar.jpg" alt="" /></span>
-							<h1 id="title">{{user.username}}</h1>
-							<span class="byline">Student</span>
+							<h1 id="title">{{theoneuser.username}}</h1>
+							<span class="byline">Expert Pooper</span>
 						</div>
 
 					<!-- Nav -->
@@ -23,7 +23,7 @@
 								<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Info</span></a></li>
 								<li><a href="/feed" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Feed</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">Posts</span></a></li>
-								<li><a href="/inbox" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Inbox</span></a></li>
+								<li><a href="/sendmessages" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Send a message</span></a></li>
 								<li><a href="/logout" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Logout</span></a></li>
 							</ul>
 						</nav>
@@ -61,7 +61,6 @@
 <div id="feed">
 
 {{#each entries}}
-<div id="theposts2">
 <p id="theposts" class="theposts1">
 
 	<a href="/article/{{id}}" id="link1" >
@@ -76,19 +75,8 @@
 	{{/if}}
 
 	Published: {{published}} OP: 
- 
-<a href="/delete/{{id}}"id="link1"> Delete</a> 
-<form method="post" action="/comment" accept-charset="UTF-8"  >
-		<input type="text" name="id" style = "display: none;" value = "{{id}}"/>
-		<input type="text"  name="comment" id="comment" placeholder="Reply"/>
-		<input type="submit" class="button"></input>
-		
-	</form>
+ 	
 </p>
-
-<br>
-</div>
-<br>
 {{/each}}
 </div>
 
