--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,21 @@
+<header id = "mainpage">
+	HyperLocal
+
+</header>
 
 
 <form method="post" action="/login" accept-charset="UTF-8" id="login">
+
  	
-	<input id="uname" type="text" placeholder="username" name = "username" /> 
-	<input id="pword" type="text" placeholder="pass" name="password" />
-	<input type="checkbox" name="rememberme" value="Bike">Remember me<br>
+	<input id="uname" type="text" placeholder="username" name = "username" />  <br>
+	<input id="pword" type="password" placeholder="pass" name="password" /><br>
+	<input type="checkbox" id="cb" name="rememberme" value="Bike">Remember me<br>
 
 	
-	<input type="submit" class="button"/>
+	<input type="submit" class="button"/> or <a href="/signupform"> Sign Up </a>
 
 </form>
+
+
+
+
