--- a/views/feed.html
+++ b/views/feed.html
@@ -5,7 +5,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="app.js"></script>
-<h1>Blog!</h1>
+<link href="/dist/css/bootstrap.css" rel="stylesheet"/>
+
 <div id="header" class="skel-panels-fixed">
 
 				<div class="top">
@@ -20,10 +21,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Info</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Feed</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">Posts</span></a></li>
-								<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Inbox</span></a></li>
+								<li><a href="/myinfo" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">My Info</span></a></li>
+								<li><a href="/" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">My Posts</span></a></li>
+								<li><a href="/feed" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Feed</span></a></li>
+								<li><a href="/inbox" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Inbox</span></a></li>
 								<li><a href="/logout" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Logout</span></a></li>
 							</ul>
 						</nav>
@@ -57,12 +58,14 @@
 </form>
 
 <!--<a href="/login"> Sing in </a>-->
-
+<br>
+	<br>
 <div id="feed">
-{{#if entries}}
-<div id="theposts2">
-{{#each entries}}
-<p id="theposts" class="theposts1">
+
+	{{#if entries}}
+	<div id="theposts2">
+	{{#each entries}}
+	<p id="theposts" class="theposts1">
 
 <a href="/article/{{id}}" id="link1" ><span id="type1">{{type}}</span> {{title}}   </a><br/>
 	{{#if commentst}}
@@ -83,9 +86,9 @@
 		
 	</form>
 </p>
-
-</div>
 {{/each}}
+	</div>
+	
 </div>
 {{else}}
 	<p> No posts yet</p>
