--- a/views/profile.html
+++ b/views/profile.html
@@ -5,7 +5,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="app.js"></script>
-<h1>Blog!</h1>
+<link href="/dist/css/bootstrap.css" rel="stylesheet">
+
+
 <div id="header" class="skel-panels-fixed">
 
 				<div class="top">
