--- a/views/signup.html
+++ b/views/signup.html
@@ -1,11 +1,17 @@
 
+<header id = "mainpage">
+	HyperLocal
 
+</header>
 <form method="post" action="/signup" accept-charset="UTF-8" id="login">
- 	
+ 	{{message}}
+ 	<br>
 	<input id="uname" type="text" placeholder="username" name = "username" /> 
+	<br>
 	<input id="pword" type="email" placeholder="email" name="email" />
+	<br>
 	<input id="pword" type="text" placeholder="pass" name="password" />
-	
+	<br>
 	<input type="submit" class="button"/>
 
 </form>
