--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
-
+<script src="/dist/js/loc.js" type="text/javascript"> </script>
 
 <div id="header" class="skel-panels-fixed">
 
@@ -56,11 +56,14 @@
 
 </form>
 
+
 <!--<a href="/login"> Sing in </a>-->
 <br>
 <br>
 
 <div id="feed">
+	<p id="demo">Click the button to get your coordinates:</p>
+<button onclick="getLocation()">Try It</button>
 
 {{#each entries}}
 	<div id="theposts2">
