--- a/views/feed.html
+++ b/views/feed.html
@@ -20,6 +20,7 @@
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure.css">
 <link rel="stylesheet" href="/dist/css/side-menu.css">
+<link rel="stylesheet" href="dist/css/tag/tags.css" type="text/css" />
     <!--<![endif]-->
  </head>
 <body>
@@ -73,8 +74,9 @@
   						<option value="I Need " name="need">I Need  * </option>
  						 <option value="I Have " name="have">I Have  </option>
   					</select><br><br>
-					<input class = "entryInput" id="blogposttitle" type="text" placeholder="What do you need?" style="placeholder-color: white"name = "posttitle" /> <br><br>
-					<input class = "entryInput" id="thepost" type="text" placeholder="Details" name="postentry" /><br><br>
+					<input class = "entryInput"  required id="blogposttitle" type="text" placeholder="What do you need?" style="placeholder-color: white"name = "posttitle" /> <br><br>
+					<input class = "entryInput" required id="thepost" type="text" placeholder="Details" name="postentry" /><br><br>
+					<input placeholder="Details" type="text" id="tags" class="input" name="tag"  /><br><br>
 					<input  class = "entryInput2" id="submitPost" type="submit" class="pure-button pure-button-primary"/>
 
 			</form>
@@ -92,7 +94,7 @@
 	{{#each entries}}
 	<p id="theposts" class="theposts1">
 
-<a href="/article/{{id}}" id="link1" ><span id="type1">{{type}}</span> {{title}}   </a><br/>
+	<a href="/article/{{id}}" id="link1" ><span id="type1">{{type}}</span> {{title}}   </a><br/>
 	{{#if commentst}}
 		{{#each commentst}}
 			<p id="thecommentst">{{thecomment}}<b><a href="/profile/{{posteruname}}"> {{posteruname}} </a> &nbsp <a href="/inboxtest/{{posteruname}}"> Message her! </a></b></p>
@@ -101,22 +103,29 @@
 			<p id="thecommentst">No Comment</p>
 	{{/if}}
 		Published: {{published}} 
-		BY : {{username}}
-  
+		Tags : 
+				{{tags}}
+			
+		BY : {{username}} 
+	   
+		
 		
 		<form method="post" action="/comment" accept-charset="UTF-8"  >
 			<input type="text" name="id" style = "display: none;" value = "{{id}}"/>
 			<input type="text"  name="comment" id="comment" placeholder="Reply"/>
+			<input type="text" name="page" value="feed" style="display: none" />
 			<input type="submit" class="button" ></input>
 		
 		</form>
 	</p>
 	{{/each}}
 	</div>
+	<br>
+	<br>
 	
-</div>
+	</div>
 	{{else}}
-		No Posrts Yet. <a href="/feed"> Refresh</a>
+		No Posts Yet. <a href="/feed"> Refresh</a>
 	{{/if}}
 {{else}}
 	<p> How did you get here/ go to <a href="/loginform">Log in </p>
@@ -138,6 +147,20 @@
 
 <script src="/dist/js/ui.js"></script>
 <script src="/dist/js/jquery.js"></script>
+<script src="dist/js/tag/tags.js"></script>  
+
+<script>
+
+//sample script to see if tags works
+  
+    $(function() {
+      $('#tags').tagbox({
+        url : ["api","blog","bootstrap","carousel","comments","configuration","content","css","database","date","drafts","email","experiment","fancybox","flickr","forum","google","html5","images","installation","jquery","js","json","kirbytext","language","maps","markdown","masonry","metatags","pagination","panel","plugin","releases","rss","search","security","server","tags","thumbnails","toolkit","tutorial","twitter","typography","uri","use case","videos","yaml"]
+      });
+    });
+
+			
+  </script>
 
 
 </body>
