--- a/views/login.html
+++ b/views/login.html
@@ -10,10 +10,9 @@
 
 
 
-
-<br><br><br><br><br>
+<br><br>
   
-  <div id="logo"> HYPERLOCAL </div>
+  <div id="logo"> @ddJACENT </div>
   <form method="post" action="/login" accept-charset="UTF-8" id="login">
     <p id="loginDialogue" > LOG IN </p>
    <input class = "loginInput" name="lat" id="lat" style="display:none" value=""></input>
@@ -29,8 +28,51 @@
      <a id= "signupLink" href="/signupform">Dont have an account? Sign Up </a>
 
    </form>
+   <br>
+
+   <div id="learnMore"> <a href="#info"> What is it?</a></div> 
+
+   <br><br><br><br>
+   <div id="info"> 
+    <br><br>
+      <b id="logo">ADDJACENT </b> 
+      <p id="question" > <b>What is it</b>   ?</p>
+      <p id="answer"> <b>ADDJACENT  </b>is a means to connect you with the people <br>around you, who can help you or who need help. It <br> is fast, seamless and secure. </p>
+       
+        <div id="learnMore"> <a href="#work"> How does it work?</a></div>
+
+    </div>
+
+   <div id="work"> 
+    <br> <br> <br> <br>
+   <p id="question"> <b>How does it work</b>  ?</p>
+   
 
 
+
+
+  <a href="#beta"> Sign up for Beta!</a>
+   </div>
+
+   <div id="beta"> 
+
+      <p id="note">The beta testing will start on the 24th March! Mark the date <br>We will email you an invite code!</p>
+
+     <input class = "loginInput"  id="uname" type="text" placeholder="username" name = "username" />  <br>
+     <input class = "loginInput2"  id="submit" type="submit" class="button" /> </a><br>
+
+
+
+  </div>
+
+
+
+
+    
+   
+
+
+<script src="/dist/js/smoothscroll.js" type="text/javascript"> </script>
 <script src="/dist/js/loc.js" type="text/javascript"> </script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
