--- a/views/inboxtest.html
+++ b/views/inboxtest.html
@@ -1,135 +1,71 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Chat with socket.io and node.js</title>
-	<style>
-		#chat{
+  <title>Chat 2.0</title>
+  <link rel="stylesheet" type="dist/css/chat" href="components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="components/font-awesome/css/font-awesome.css">
 
-			height:500px;
-			padding: 5px;
-			background-color: white;
-			color: black;
-			font-weight: 20px;
-			font-family: Heveltica;
-
-		}
-		
-		#chatWrap{
-			float: left;
-			border: 1px #000 solid;
-		}
-		.error{
-			color: red;
-		}
-		.msg {
-			font-family: arial;
-			padding: 5px;
-
-		}
-	</style>
+  <link rel="stylesheet" href="dist/css/chat/app.css">
 </head>
 <body>
-	asdfasf
-	
+  
+    <div class="row" id="main-chat-screen">
+      <div class="col-md-3">
+        <ul id="rooms" class="list-group"></ul>
+        <ul id="people" class="list-group"></ul>
+      </div>
+      <div class="col-md-6">
+        <div id="conversation">
+          <ul id="msgs" class="list-unstyled"></ul>
+        </div>
+        <form id="chatForm" class="form-inline">
+          <div class="form-group">
+            <input type="text" class="form-control input-lg" placeholder="Your message" id="msg">
+          </div>
+          <input type="submit" name="send" id="send" value="Send" class="btn btn-success btn-lg">
+          <input type="button" name="start_button" id="start_button" value="Record" onclick="startButton(event)" class="btn btn-info btn-lg">
+          <div class="btn-group">
+            <button type="button" class="btn btn-lg btn-info dropdown-toggle" data-toggle="dropdown" >
+              Actions <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#" name="createRoom" data-toggle="modal" data-target="#roomModal">Create room</a></li>
+              <li><a href="#" name="leave" id="leave">Leave current room</a></li>
+              <!--<li><a href="#" name="disconnect" id="disconnect">Disconnect from chat</a></li>-->
+            </ul>
+          </div>
+        </form>
+      </div>
+       <div class="col-md-2">
+        <ul class="list-unstyled" id="updates"></ul>
+      </div>
+    </div>
+  </div>
 
-	<div id="contentWrap">
-		<div id="chatWrap">
-			<div id="chat"></div>
-			<form id="send-message">
-				<input size="35" id="message"></input>
-				<input type="submit"></input>
-			</form>
-		</div>
-		<div id="users"></div>
-	</div>
-	
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script>
-		jQuery(function($){
-			var socket = io.connect();
-			var $users = $('#users');
-			var $messageForm = $('#send-message');
-			var $messageBox = $('#message');
-			var $chat = $('#chat');
-			var user = "{{user.username}}";
-			
-			
-				
-				socket.emit('new user', user , function(data){
-                    if(data) {
-                    console.log(user);
-					console.log(" New Added");
-                     }
+  <!-- Modal start -->
+  <div class="modal fade" id="roomModal" tabindex="-1" role="dialog" aria-labelledby="createRoomLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="createRoomLabel">Create room</h4>
+        </div>
+        <div class="modal-body">
+          You can create a chat room here. Names have to be unique.
+          <form class="form-inline" id="createRoomForm"><input type="text" class="form-control input-lg"  placeholder="Room name" id="createRoomName"></form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Close</button>
+          <button data-dismiss="modal" id="createRoomBtn" class="btn btn-success btn-lg">Create room</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal end -->
 
-                    else {
-                        $chat.append("USER ALREADY HAS A TOKEN MOGO");
-
-                        console.log("Socket replacd, with new one! bruv")
-                    }
-				});
-				
-		socket.on('usernames', function(data){
-
-			if(data) {
-                var html = '';
-                for(var i=0; i < data.length; i++){
-                    html += data[i] + '<br/>'
-                }
-                $users.html(html);
-            }
-
-            else {
-            	console.log("USER EXISTS");
-            }
-            });
-            
-            $messageForm.submit(function(e){
-                e.preventDefault();
-                socket.emit('send message', $messageBox.val(), function(data){
-                    $chat.append('<span class="error">' + data + "</span><br/>");
-                });
-                $messageBox.val('');
-            });
-            
-            socket.on('load old msgs', function(docs){
-                $('#chat').empty();
-                for(var i=docs.length-1; i >= 0; i--){
-                    displayMsg(docs[i]);
-                }
-            });
-            
-            socket.on('new message', function(data){
-                displayMsg(data);
-            });
-            
-            function displayMsg(data){
-                $chat.append('<span class="msg"><b>' + data.nick + ': </b>' + data.msg + "</span><br/>");
-            }
-            
-            socket.on('whisper', function(data){
-
-
-            	if(data.nick === "{{user.username}}" ) {
-
-                $chat.append('<span class="msg"><b>' + data.nick + ': </b>' + data.msg + "</span><br/>");
-
-
-           		 }
-
-           		else if( data.nick === "{{reciever}}") {
-
-                $chat.append('<span class="msg"><b>' + data.nick + ': </b>' + data.msg + "</span><br/>");
-
-
-           		 }
-
-
-
-            });
-
-            
-
-        });
-	</script>
+  <script src="components/jquery/jquery.js"></script>
+  <script src="components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/socket.io/socket.io.js"></script>  
+  <script src="js/client.js"></script>
 </body>
 </html>
